
    o	More Lapack routines are available (and declared in R_Ext/Lapack.h),
	notably for (reciprocal) condition number estimation of complex
	matrices.

    o	Experimental utility R_has_slot supplementing R_do_slot.

    o	There is a new public interface to the encoding info stored on
	CHARSXPs, getCharCE and mkCharCE using the enumeration type
	cetype_t.


BUG FIXES

    o	pt(x, df) is now even more accurate in some cases (e.g. 12 instead
	of 8 significant digits), when x^2 << df, thanks to a remark from
	Ian Smith, related to PR#9945.

    o	co[rv](use = "complete.obs") now always gives an error if there
	are no complete cases: they used to give NA if
	method = "pearson" but an error for the other two methods.  (Note
	that this is pretty arbitrary, but zero-length vectors always
	give an error so it is at least consistent.)

	cor(use="pair") used to give diagonal 1 even if the variable
	was completely missing for the rank methods but NA for the
	Pearson method: it now gives NA in all cases.

	cor(use="pair") for the rank methods gave a matrix result with
	dimensions > 0 even if one of the inputs had 0 columns.

    o	Supplying edit.row.names = TRUE when editing a matrix without
	row names is now an error and not a segfault. (PR#10500)

    o	The error handler in the parser reported unexpected
	& as && and | as ||.

    o	ps.options(reset = TRUE) had not reset for a long time.

    o	paste() and file.path() no longer allow NA_character_ for
	their 'sep' and 'collapse' arguments.

    o	by() failed for 1-column matrices and dataframes.  (PR#10506)
	However, to preserve the old behaviour, the default method
	when operating on a vector still passes subsets of the vector
	to FUN, and this is now documented.

    o	Better behaviour of str.default() for non-default
	'strict.width' (it was calling str() rather than str.default()
	internally); also, more useful handling of options("str").

    o	wilcox.test(exact=FALSE, conf.int=TRUE) could fail in some